# mcp-web-search

./: README.md  pyproject.toml
mcp_web_search/: __init__.py  server.py
